--- a/entity/data/variations/variations-hi.yaml
+++ b/entity/data/variations/variations-hi.yaml
@@ -71,6 +71,7 @@ bank_name:
   - एयरटेल पेमेंट बैंक
   - एपीबी बैंक
   - एपीबी
+  - एयरटेल पाय्मेंट्स बैंक
   Ajanta Urban Co-Op Bank ltd:
   - अजंता अर्बन कोऑपरेटिव बैंक लिमिटेड
   - अजंता अर्बन कोऑपरेटिव बैंक
@@ -1637,6 +1638,7 @@ lpg_gas_provider_name:
   - इंडेन गैस
   - इंडियन गैस
   - इंडेन
+  - इंडियन ऑयल
   Jyothi Gas Pvt. Ltd:
   - ज्योथी गैस प्राईवेट लिमिटिड
   - ज्योथी गैस
