--- a/entity/data/variations/variations-or.yaml
+++ b/entity/data/variations/variations-or.yaml
@@ -171,6 +171,13 @@ bank_name:
   - ଆକ୍ସିସ ବେଙ୍କ
   - ଏକ୍ସିସ ବ୍ୟାଙ୍କ
   - ଏକ୍ସିସ ବେଙ୍କ
+  - ଏକ୍ସିସ ବ୍ୟାଙ୍କର
+  - ଏକ୍ସେସ ବ୍ୟାଙ୍କ
+  - ଆକ୍ସିସ୍ ବ୍ୟାଙ୍କରେ
+  - ଆକ୍ସିସ ବ୍ୟାଙ୍କର
+  - ଏସିସ ବ୍ୟାଙ୍କ
+  - ଆକ୍ସିସ୍ ବ୍ୟାଙ୍କ
+  - ଆକ୍ସିସ୍ ବ୍ୟାଙ୍କ
   BALOTRA URBAN CO-OPERATIVE BANK LTD:
   - ବାଲୋତ୍ରା ଅର୍ବାନ କୋଅପରେଟିଭ୍ ବ୍ୟାଙ୍କ ଲିମିଟେଡ୍
   - ବାଲୋତ୍ରା ଅର୍ବାନ କୋଅପରେଟିଭ୍ ବେଙ୍କ ଲିମିଟେଡ୍
@@ -195,6 +202,7 @@ bank_name:
   - ବନ୍ଧନ ବେଙ୍କ
   - ବନ୍ଧ ବ୍ୟାଙ୍କ
   - ବନ୍ଧ ବେଙ୍କ
+  - ବନ୍ଦନ ବ୍ୟାଙ୍କରେ
   Bank of America NA:
   - ବ୍ୟାଙ୍କ ଅଫ୍ ଆମେରିକା ଏନଏ
   - ବ୍ୟାଙ୍କ ଅଫ୍୍ ଆମେରିକା ଏନଏ
@@ -217,11 +225,19 @@ bank_name:
   - ବରଦା ବେଙ୍କ
   - ବର୍‌ଦା ବ୍ୟାଙ୍କ
   - ବର୍‌ଦା ବେଙ୍କ
+  - ବ୍ୟାଙ୍କ ଅଫ୍ ବରୋଡା
+  - ବ୍ୟାଙ୍କ ଅଫ ବରୋଦାରେ
+  - ବ୍ୟାଙ୍କ ଅଫ୍ ବରୁଡାର
+  - ବ୍ୟାଙ୍କ ଓଫ ବରୋଡା
+  - ବ୍ୟାଙ୍କ ଅଫ୍ ବରୋଦାରେ
   Bank of India:
   - ବ୍ୟାଙ୍କ ଅଫ୍ ଇଣ୍ଡିଆ
-  - ବ୍ୟାଙ୍କ ଅଫ୍୍ ଇଣ୍ଡିଆ
+  - ବ୍ୟାଙ୍କ ଅଫ୍ ଇଣ୍ଡିଆର
   - ବେଙ୍କ ଅଫ୍ ଇଣ୍ଡିଆ
   - ବେଙ୍କ ଅଫ୍୍ ଇଣ୍ଡିଆ
+  - ବ୍ୟାଙ୍କ ଅଫ ଇଣ୍ଡିଆ
+  - ବ୍ୟାଙ୍କ ଅପ୍ ଇଣ୍ଡିଆ
+  - ବ୍ୟାଙ୍କ ଅପ୍ ଇଣ୍ଡିଆ
   Bank of Maharashtra:
   - ବ୍ୟାଙ୍କ ଅଫ୍ ମହାରାଷ୍ଟ୍ର
   - ବ୍ୟାଙ୍କ ଅଫ୍୍ ମହାରାଷ୍ଟ୍ର
@@ -229,6 +245,9 @@ bank_name:
   - ବେଙ୍କ ଅଫ୍୍ ମହାରାଷ୍ଟ୍ର
   - ମହାରାଷ୍ଟ୍ର ବ୍ୟାଙ୍କ
   - ମହାରାଷ୍ଟ୍ର ବେଙ୍କ
+  - ବ୍ୟାଙ୍କ ଅଫ୍ ମହାରାଷ୍ଟ୍ରର
+  - ବ୍ୟାଙ୍କ ଅଫ ମହାରାଷ୍ଟ୍ରର
+  - ବ୍ୟାଙ୍କ ଅଫ ମହାରାଷ୍ଟ୍ରଠାରୁ
   Baran Nagrik Sahkari Bank Ltd:
   - ବରନ୍ ନାଗରିକ ସହକାରୀ ବ୍ୟାଙ୍କ ଲିମିଟେଡ୍
   - ବରନ୍ ନାଗରିକ ସହକାରୀ ବେଙ୍କ ଲିମିଟେଡ୍
@@ -326,6 +345,7 @@ bank_name:
   - କାନାରା ବେଙ୍କ
   - କାନାଡ଼ା ବ୍ୟାଙ୍କ
   - କାନାଡ଼ା ବେଙ୍କ
+  - କ୍ୟାନେରା ବ୍ୟାଙ୍କର
   Capital Small Finance Bank:
   - କ୍ୟାପିଟାଲ ସ୍ମଲ୍ ଫାଇନାନ୍ସ ବ୍ୟାଙ୍କ
   - କ୍ୟାପିଟାଲ ସ୍ମଲ୍ ଫାଇନାନ୍ସ ବେଙ୍କ
@@ -521,6 +541,8 @@ bank_name:
   Federal Bank:
   - ଫେଡେରାଲ ବ୍ୟାଙ୍କ
   - ଫେଡେରାଲ ବେଙ୍କ
+  - ଫେଡେରାଲ ବ୍ୟାଙ୍କର
+  - ଫେଡେରାଲ ବ୍ୟାଙ୍କରେ
   Fincare Small Finance Bank:
   - ଫିନକେୟାର ସ୍ମଲ ଫାଇନାନ୍ସ ବ୍ୟାଙ୍କ
   - ଫିନକେୟାର ସ୍ମଲ ଫାଇନାନ୍ସ ବେଙ୍କ
@@ -586,6 +608,9 @@ bank_name:
   - ଏଚଡିଏଫସି ବ୍ୟାଙ୍କ
   - ଏଚଡିଏଫସି ବେଙ୍କ
   - ଏଚଡିଏଫସି
+  - ଏଚଡିଏଫ୍ସି ବ୍ୟାଙ୍କର
+  - ଏଚଡିଏପସି ବ୍ୟାଙ୍କରୁ 
+  - ଏଚଡିଏଫ୍ସି ବ୍ୟାଙ୍କରୁ
   HSBC:
   - ଏଚଏସବିସି
   - ହଂକଂ ବ୍ୟାଙ୍କ
@@ -620,6 +645,9 @@ bank_name:
   - ଆଇସିଆଇସିଆଇ
   - ଆଇସିଆଇସି ବ୍ୟାଙ୍କ
   - ଆଇସିଆଇସି ବେଙ୍କ
+  - ଆଇସିସି ବ୍ୟାଙ୍କର
+  - ଆଇସିଆଇସିଏ ବ୍ୟାଙ୍କର
+  - କୁଟକ୍ ମହିନ୍ଦ୍ରା ବ୍ୟାଙ୍କର
   IDBI Bank:
   - ଆଇଡିବିଆଇ ବ୍ୟାଙ୍କ
   - ଆଇଡିବିଆଇ ବେଙ୍କ
@@ -639,9 +667,11 @@ bank_name:
   - ପୋଷ୍ଟ ପେମେଣ୍ଟସ ବେଙ୍କ
   Indian Bank:
   - ଇଣ୍ଡିଆନ୍ ବ୍ୟାଙ୍କ
+  - ଇଣ୍ଡିଆନ ବ୍ୟାଙ୍କର
   - ଇଣ୍ଡିଆନ୍ ବେଙ୍କ
   - ଭାରତ ବ୍ୟାଙ୍କ
   - ଭାରତ ବେଙ୍କ
+  - ଇଣ୍ଡିଆନ ବ୍ୟାଙ୍କ
   Indian Overseas Bank:
   - ଇଣ୍ଡିଆନ୍ ଓଭରସିଜ୍ ବ୍ୟାଙ୍କ
   - ଇଣ୍ଡିଆନ୍ ଓଭରସିଜ୍ ବେଙ୍କ
@@ -735,6 +765,8 @@ bank_name:
   - ଜେକେ ବେଙ୍କ
   - ଜାମ୍ମୁ ଏବଂ କାଶ୍ମୀର ବ୍ୟାଙ୍କ
   - ଜାମ୍ମୁ ଏବଂ କାଶ୍ମୀର ବେଙ୍କ
+  - ଜମ୍ମୁ କଶ୍ମୀର ବ୍ୟାଙ୍କରେ
+  - ଜାମ୍ମୁ କଶ୍ମୀର ବ୍ୟାଙ୍କରେ
   Jana Small Finance Bank:
   - ଜନ ସ୍ମଲ ଫାଇନାନ୍ସ ବ୍ୟାଙ୍କ
   - ଜନ ସ୍ମଲ ଫାଇନାନ୍ସ ବେଙ୍କ
@@ -925,6 +957,10 @@ bank_name:
   - କେ ମହିନ୍ଦ୍ରା ବ୍ୟାଙ୍କ
   - କେ ମହିନ୍ଦ୍ରା ବେଙ୍କ
   - କେଏମବି
+  - କୋଟକ ବ୍ୟାଙ୍କଠାରୁ
+  - କୋଟକ ବ୍ୟାଙ୍କ୍ରେ
+  - କୋଟକ ବ୍ୟାଙ୍କରେ
+  - କୋଟକ ମହିନ୍ଦ୍ରା ବ୍ୟାଙ୍କର
   Kottakkal Co- Op Urban Bank Ltd:
   - କୋଟକ୍କଲ କୋଅପ ଅରବାନ ବ୍ୟାଙ୍କ ଏଲଟିଡି
   - କୋଟକ୍କଲ କୋଅପ ଅରବାନ ବେଙ୍କ ଏଲଟିଡି
@@ -1785,6 +1821,7 @@ bank_name:
   - ସ୍ଟେଟ ବେଙ୍କ ଅଫ୍ ଇଣ୍ଡିଆ
   - ସ୍ଟେଟ ବ୍ୟାଙ୍କ
   - ସ୍ଟେଟ ବେଙ୍କ
+  - ଷ୍ଟେଟ୍ ବ୍ୟାଙ୍କରେ
   Sterling Urban Co-operative Bank Ltd:
   - ଷ୍ଟେର୍ଲିଙ୍ଗ ଅରବାନ କୋଅପରେଟିଭ ବ୍ୟାଙ୍କ ଏଲଟିଡି
   - ଷ୍ଟେର୍ଲିଙ୍ଗ ଅରବାନ କୋଅପରେଟିଭ ବେଙ୍କ ଏଲଟିଡି
@@ -2972,6 +3009,7 @@ bank_name:
   - ୟୁକୋ ବେଙ୍କ
   - ୟୁନାଇଟେଡ଼ କମରସିଆଲ ବ୍ୟାଙ୍କ
   - ୟୁନାଇଟେଡ଼ କମରସିଆଲ ବେଙ୍କ
+  - ୟୁକୋ ବ୍ୟାଙ୍କରେ
   Ujjivan Small Finance Bank:
   - ଉଜୀବନ ସ୍ମଲ ଫାଇନାନ୍ସ ବ୍ୟାଙ୍କ
   - ଉଜୀବନ ସ୍ମଲ ଫାଇନାନ୍ସ ବେଙ୍କ
@@ -2985,6 +3023,10 @@ bank_name:
   - ୟୁନିଅନ ବେଙ୍କ ଅଫ ଇଣ୍ଡିଆ
   - ୟୁନିଅନ ବେଙ୍କ ଅଫ୍ ଇଣ୍ଡିଆ
   - ୟୁବିଆଇ
+  - ୟୁନିୟନ ବ୍ୟାଙ୍କର
+  - ୟୁନିୟନ ବ୍ୟାଙ୍କରେ
+  - ୟୁନିଅନ ବ୍ୟାଙ୍କ
+  - ୟୁନିଅନ ବ୍ୟାଙ୍କର
   Union Co-operative Bank Ltd.:
   - ୟୁନିଅନ କୋଅପରେଟିଭ ବ୍ୟାଙ୍କ ଏଲଟିଡି
   - ୟୁନିଅନ କୋଅପରେଟିଭ ବେଙ୍କ ଏଲଟିଡି
@@ -3136,3 +3178,211 @@ bank_name:
   - ୟେସ୍ ବ୍ୟାଙ୍କ
   - ୟେସ୍ ବେଙ୍କ
   - ୱାଇବି
+  - ୟେସ୍ ବ୍ୟାଙ୍କର
+  - ୟେସ୍ ବ୍ୟାଙ୍କରେ
+lpg_gas_provider_name:
+  Bharat Petroleum Corporation Ltd.:
+  - ଭାରତ ପେଟ୍ରୋଲିୟମ କର୍ପୋରେସନ ଲିମିଟେଡ୍
+  - ଭରତ ଗ୍ୟାସରୁ
+  - ବି ପି ସି ଏଲ୍
+  - ଭାରତ ଜିଏଏସ
+  - ଭାରତ ପେଟ୍ରୋଲିୟମ
+  - ଭାରତ ଗ୍ୟାସର
+  - ଭାରତ ଗ୍ୟାସx`
+  - ଭାରତ ଗ୍ୟାସର।
+  Hindustan Petroleum Corporation Ltd.:
+  - ହିନ୍ଦୁସ୍ତାନ ପେଟ୍ରୋଲିୟମ କର୍ପୋରେସନ ଲିମିଟେଡ୍
+  - ହ୍ ପି ଜିଏଏସ
+  - ଏଚପି ଗ୍ୟାସର
+  - ହ୍ ପି
+  - ହିନ୍ଦୁସ୍ତାନ ପେଟ୍ରୋଲିୟମ
+  - ହ୍ ପି ସି ଏଲ୍
+  Indian Oil Corporation Ltd.:
+  - ଇଣ୍ଡିଆନ୍ ଓଆଇଏଲ କର୍ପୋରେସନ ଲିମିଟେଡ୍
+  - ଇଣ୍ଡେନ୍ ଜିଏଏସ
+  - ଇଣ୍ଡିଆନ ଅଏଲରୁ
+  - ଇନ୍ଦାନେ
+  - ଇଣ୍ଡିଆନ ଗ୍ୟାସର
+  Jyothi Gas Pvt. Ltd:
+  - ଜ୍ୟୋତି ଗ୍ୟାସ୍ ବ୍ୟକ୍ତିଗତ ସୀମିତ
+  - ଜ୍ୟୋତି ଜିଏଏସ
+  - ଜ୍ୟୋତି ଜିଏଏସ
+telephone_operator:
+  Airtel:
+  - ଏୟାରଟେଲ
+  - ଭାରତୀ ଏୟାରଟେଲ୍ |
+  BSNL:
+  - ବିଏସଏନଏଲ
+  - ବିଏସଏନ୍ଏଲ୍
+  Jio:
+  - ଜିଓ
+  - ଝିଓ
+  - ରିଲାଏନ୍ସ ଜିଓ
+  - ଜିଓ
+  MTNL:
+  - ଡଲଫିନ୍
+  - ଟ୍ରମ୍ପ
+  - ଏମଟିଏନଏଲ
+  Vodafone:
+  - ଭି
+  - ଭୋଡାଫୋନ
+  - ଆଇଡିଇଏ
+pipe_gas_provider_name:
+  Aavantika Gas Ltd.:
+  - ଆଭନ୍ତିକ ଜିଏଏସ ଲିମିଟେଡ୍
+  Adani Total Gas Limited:
+  - ଅଦାନୀ ଟୋଟାଲ ଜିଏଏସ ଲିମିଟେଡ୍
+  - ଅଦାନୀ ଜିଏଏସ
+  - ଅଦାନୀ ଟୋଟାଲ
+  - ଅଦାନୀ ପାଇପ୍ ଜିଏଏସ
+  Assam Gas Company Limited:
+  - ଆସାମ ଜିଏଏସ କମ୍ପାନୀ ଲିମିଟେଡ୍
+  - ଆସାମ ଜିଏଏସ କମ୍ପାନୀ
+  - ଆସାମ ଜିଏଏସ
+  Bhagyanagar Gas Limited:
+  - ଭାଗନଗର ଗ୍ୟାସ ସୀମିତ
+  Central U.P. Gas Limited:
+  - ସେଣ୍ଟ୍ରାଲ ଉ ପି ଜିଏଏସ ଲିମିଟେଡ୍
+  - सेन्ट्रल यू पी गैस लिमिटेड
+  Charotar Gas Sahakari Mandali Ltd:
+  - ଚାରୋଟାର ଜିଏଏସ ସହକାରୀ ମଣ୍ଡଳୀ ଲିମିଟେଡ୍
+  GAIL Gas Limited:
+  - ଗେଲ୍ ଜିଏଏସ ଲିମିଟେଡ୍
+  - ଗାଲି
+  GAIL India Limited:
+  - ଗେଲ୍ ଇଣ୍ଡିଆ ଲିମିଟେଡ୍
+  - ଗେଲ୍ ଇଣ୍ଡିଆ
+  Green Gas Limited(GGL):
+  - ଗ୍ରୀନ୍ ଜିଏଏସ ଲିମିଟେଡ୍
+  - ଗ୍ରୀନ୍ ଜିଏଏସ
+  - ଜି ଜି ଏଲ୍
+  Gujarat Gas Limited:
+  - ଗୁଜରାତ ଜିଏଏସ ଲିମିଟେଡ୍
+  Gujarat State Petronet Limited:
+  - ଗୁଜରାତ ଷ୍ଟେଟ୍ ପେଟ୍ରୋନେଟ୍ ଲିମିଟେଡ୍
+  Haryana City Gas - Kapil Chopra Enterprise:
+  - ହରିୟାଣା ସିଟି ଜିଏଏସ କପିଲ ଚୋପ୍ରା ଏଣ୍ଟରପ୍ରାଇଜ୍
+  - ହରିୟାଣା ସିଟି ଜିଏଏସ
+  - କପିଲ ଚୋପ୍ରା ଏଣ୍ଟରପ୍ରାଇଜ୍
+  IRM Energy Private Limited:
+  - ଆଇ ର ଏମ୍ ଏନର୍ଜି ପ୍ରାଇଭେଟ୍ ଲିମିଟେଡ୍ ସୀମିତ
+  Indian Oil Corporation Ltd-Piped Gas:
+  - ଇଣ୍ଡିଆନ୍ ଓଆଇଏଲ କର୍ପୋରେସନ ଲିମିଟେଡ୍ ପାଇପଡ୍ ଜିଏଏସ
+  - ଆଇଓସିଏଲ୍
+  - ଇଣ୍ଡିଆନ୍ ଓଆଇଏଲ
+  Indian Oil-Adani Gas Private Limited:
+  - ଇଣ୍ଡିଆନ୍ ଓଆଇଏଲ ଅଦାନୀ ଜିଏଏସ ପ୍ରାଇଭେଟ୍ ଲିମିଟେଡ୍
+  Indraprastha Gas:
+  - ଇନ୍ଦ୍ରପ୍ରସ୍ଥ ଜିଏଏସ
+  - ଆଇ ଜି ଏଲ୍
+  - ଇନ୍ଦ୍ରପ୍ରସ୍ଥ ଜିଏଏସ
+  Mahanagar Gas Limited:
+  - ମହାନଗର ଜିଏଏସ ଲିମିଟେଡ୍
+  - ମହାନଗର ଜିଏଏସ
+  Maharashtra Natural Gas Limited (MNGL):
+  - ମହାରାଷ୍ଟ୍ର ନ୍ୟାଚୁରାଲ ଜିଏଏସ ଲିମିଟେଡ୍
+  - ଏମ୍ ନ୍ ଜି ଏଲ୍
+  - ମହାରାଷ୍ଟ୍ର ଜିଏଏସ ଲିମିଟେଡ୍
+  Megha Gas:
+  - ମେଘା ଜିଏଏସ
+  Naveriya Gas Pvt Ltd:
+  - ନଭେରିୟା ଜିଏଏସ ପ୍ରାଇଭେଟ୍ ଲିମିଟେଡ୍
+  Purba Bharati Gas Pvt Ltd:
+  - ପୁରବା ଭାରତୀ ଜିଏଏସ ପ୍ରାଇଭେଟ୍ ଲିମିଟେଡ୍
+  Rajasthan State Gas Limited:
+  - ରାଜସ୍ଥାନ ଷ୍ଟେଟ୍ ଜିଏଏସ ଲିମିଟେଡ୍
+  Sabarmati Gas Limited (SGL):
+  - ସାବରମତୀ ଜିଏଏସ ଲିମିଟେଡ୍
+  - ଏସ୍ ଜି ଏଲ୍
+  Torrent Gas:
+  - ଟୋରେଣ୍ଟ ଜିଏଏସ
+  Tripura Natural Gas:
+  - ତ୍ରିପୁରା ନ୍ୟାଚୁରାଲ ଜିଏଏସ
+  Unique Central Piped Gases Pvt Ltd (UCPGPL):
+  - ୟୁନିକ୍ ସେଣ୍ଟ୍ରାଲ ପାଇପଡ୍ ଗେସ୍ ପ୍ରାଇଭେଟ୍ ଲିମିଟେଡ୍
+  - ଉ ସି ପି ଜି ପି ଏଲ୍
+  Vadodara Gas Limited:
+  - ଭଦୋଦରା ଜିଏଏସ ଲିମିଟେଡ୍
+# state_name:
+#   Andaman and Nicobar:
+#   - ଆଣ୍ଡାମାନ ଆଣ୍ଡ ନିକୋବର
+#   - ଆଣ୍ଡାମାନ ନିକୋବର
+#   - ଆଣ୍ଡାମାନ
+#   Andhra Pradesh:
+#   - ଆନ୍ଧ୍ର ପ୍ରଦେଶ
+#   - ଆ ପି
+#   - ଆନ୍ଧ୍ର
+#   Arunachal Pradesh:
+#   - ଅରୁଣାଚଳ ପ୍ରଦେଶ
+#   - ଅରୁଣାଚଳ
+#   Assam:
+#   - ଆସାମ
+#   Bihar:
+#   - ବିହାର
+#   Chandigarh:
+#   - ଚଣ୍ଡିଗଡ଼
+#   Dadra and Nagar Haveli:
+#   - ଦାଦରା ନଗର ହାଭେଲି
+#   - ଦାଦରା ଆଣ୍ଡ ନଗର ହାଭେଲି
+#   Daman and Diu:
+#   - ଡାମନ୍ ଏବଂ ଡିୟୁ
+#   Delhi:
+#   - ଦିଲ୍ଲୀ
+#   Goa:
+#   - ଗୋଆ
+#   Gujarat:
+#   - ଗୁଜୁରାଟ
+#   Haryana:
+#   - ହରିୟାଣା
+#   Himachal Pradesh:
+#   - ହିମାଚଳ ପ୍ରଦେଶ
+#   - ହିମାଚଳ
+#   Jammu and Kashmir:
+#   - ଜମ୍ମୁ ଆଣ୍ଡ କାଶ୍ମୀର
+#   - ଜେ ଆଣ୍ଡ କେ
+#   - ଜମ୍ମୁ କାଶ୍ମୀର
+#   Karnataka:
+#   - କର୍ଣ୍ଣାଟକ
+#   Kerala:
+#   - କେରଳ
+#   Lakshadweep:
+#   - ଲକ୍ଷାଦ୍ୱୀପ
+#   Madhya Pradesh:
+#   - ମଧ୍ୟ ପ୍ରଦେଶ
+#   - ଏମ୍ ପି
+#   Maharashtra:
+#   - ମହାରାଷ୍ଟ୍ର
+#   Manipur:
+#   - ମଣିପୁର
+#   Meghalaya:
+#   - ମେଘାଳୟ
+#   Mizoram:
+#   - ମିଜୋରାମ
+#   Nagaland:
+#   - ନାଗାଲାଣ୍ଡ
+#   Odisha:
+#   - ଓରିସା
+#   - ଓଡିଶା
+#   Puducherry:
+#   - ପୁଡୁଚେରୀ
+#   - ପଣ୍ଡିଚେରୀ
+#   Punjab:
+#   - ପଞ୍ଜାବ
+#   Rajasthan:
+#   - ରାଜସ୍ଥାନ
+#   Sikkim:
+#   - ସିକ୍କିମ
+#   Tamil Nadu:
+#   - ତାମିଲ ନାଡୁ
+#   - ଟି ନ୍
+#   Telangana:
+#   - ତେଲଙ୍ଗାନା
+#   Tripura:
+#   - ତ୍ରିପୁରା
+#   Uttar Pradesh:
+#   - ଉତ୍ତର ପ୍ରଦେଶ
+#   - ଉ ପି
+#   West Bengal:
+#   - ୱେଷ୍ଟ ବେଙ୍ଗଲ
+#   - ବେଙ୍ଗଲ
+#   - ପଶ୍ଚିମ ବଙ୍ଗାଲ
