--- a/entity/data/variations/variations-ta.yaml
+++ b/entity/data/variations/variations-ta.yaml
@@ -46,6 +46,9 @@ bank_name:
   - ஆக்ஸிஸ் பேங்க் 
   - அக்சிஸ் பேங்க் 
   - ஆக்க்ஸிஸ் பேங்க் 
+  - ஆக்சிஸ் பேங்க்
+  - ஆக்சஸ் பேங்க்
+  - ஆக்ஸிஸ் பேங்க
   BALOTRA URBAN CO-OPERATIVE BANK LTD:
   - பலோத்ரா அர்பன் கூட்டுறவு வங்கி லிமிடெட்
   Bandhan Bank:
@@ -68,13 +71,17 @@ bank_name:
   - இந்தியா பேங்க்
   - பி ஓ ஐ
   - பி ஐ பேங்க் 
-  - பேங்க் ஆப் இந்தியா  
+  - பேங்க் ஆப் இந்தியா
+  - பேங்க் ஆப் இண்டியா 
   Bank of Maharashtra:
   - மகாராஷ்டிரா வங்கி
   - பேங்க் ஆப் மஹாராஸ்ஷ்ட்ர 
   - மகாராஷ்டிரா பேங்க் 
   - பேங்க் ஆப் மஹாராஸ்ரா 
   - பேங்க் ஆப் மகாராஷ்ட்ரா 
+  - பேங்க் ஆஃப் மகாராஷ்டிரா
+  - பேங்க் ஆப் மகாராஷ்டிரா
+  - பேங்க் ஆஃப் மகாராஷ்ட்ரா 
   Baran Nagrik Sahkari Bank Ltd:
   - பரன் நாக்ரிக் சகாரி வங்கி லிமிடெட்
   Baroda Gujarat Gramin Bank:
@@ -96,7 +103,7 @@ bank_name:
   Bicholim Urban Cooperative Bank:
   - Bicholim நகர்ப்புற கூட்டுறவு வங்கி
   Bombay Mercantile Co-Op Bank Ltd:
-  - பாம்பே மெர்கன்டைல் ​​கோஆப் பேங்க் லிமிடெட்
+  - பாம்பே மெர்கன்டைல் கோஆப் பேங்க் லிமிடெட்
   CITI Retail:
   - சிஐடிஐ சில்லறை விற்பனை
   Canara Bank:
@@ -233,6 +240,8 @@ bank_name:
   - ஐ சி ஐ சி ஐ பேங்க் 
   - ஐ சி ஐ பேங்க் 
   - ஐ சி பேங்க் 
+  - ஐசிசிஐ பேங்க் 
+  - ஐசிஐசி பேங்க்
   IDBI Bank:
   - ஐடிபிஐ வங்கி
   - ஐ டி பி ஐ பேங்க் 
@@ -249,6 +258,7 @@ bank_name:
   - இந்திய அஞ்சல் கட்டண வங்கி
   Indian Bank:
   - இந்தியன் வங்கி
+  - இந்தியன் பேங்க்லே
   - இந்தியன் பேங்க்
   - இண்டியன் பேங்க் 
   - இந்தியா பேங்க் 
@@ -367,7 +377,7 @@ bank_name:
   Kerala Gramina Bank:
   - கேரளா கிராமினா வங்கி
   Kokan Merchantile Co-operative Bank Ltd:
-  - கோகன் மெர்சண்டைல் ​​கூட்டுறவு வங்கி லிமிடெட்
+  - கோகன் மெர்சண்டைல் கூட்டுறவு வங்கி லிமிடெட்
   Kolhapur District Central Co-operative Bank Limited:
   - கோலாப்பூர் மாவட்ட மத்திய கூட்டுறவு வங்கி லிமிடெட்
   Kolhapur Mahila Sahakari Bank Ltd:
@@ -381,6 +391,11 @@ bank_name:
   - கோடக் மஹின்ரா பேங்க் 
   - கோட்டக் மஹின்ரா பேங்க் 
   - கோட்டக் பேங்க் 
+  - கோட்டக் மஹிந்திரா பேங்க்
+  - கோட்டக் மகிந்திரா பாங்க்ல
+  - கோட்டக் மஹிந்திரா பேங்க்லஇருந்து
+  - கோட்டாக் மஹிந்திரா பேங்க்
+  - மகிந்திரா பேங்க்
   Kottakkal Co- Op Urban Bank Ltd:
   - கோட்டக்கல் கூட்டுறவு அர்பன் வங்கி லிமிடெட்
   Krishna Bhima Samruddhi Local Area Bank:
@@ -499,7 +514,8 @@ bank_name:
   - பஞ்சாப் நேஷனல் பேங்க் 
   - நேஷனல் பேங்க் பஞ்சாப் 
   - பஞ்சாபி நேஷனல் பேங்க் 
-  - பன்ஜிப் நேஷனல் பேங்க் 
+  - பன்ஜிப் நேஷனல் பேங்க்
+  - ப்ன்ப் பேங்க் 
   RBL Bank:
   - ஆர்பிஎல் வங்கி
   - ஆர்பிஎல் பேங்க் 
@@ -547,6 +563,7 @@ bank_name:
   - சரஸ்பூர் நாக்ரிக் கூட்டுறவு வங்கி லிமிடெட்
   Saraswat Bank:
   - சரஸ்வத் வங்கி
+  - சரஸ்வத் பேங்க் 
   Sardar Vallabhbhai Sahakari Bank Ltd:
   - சர்தார் வல்லபாய் சககாரி வங்கி லிமிடெட்
   Sarva Haryana Gramin Bank:
@@ -670,12 +687,12 @@ bank_name:
   - அப்பாஸ் தமிழ்நாடு பேங்க் 
   - ஸ்டேட் அப்பக்கஸ் லிமிடெட் பேங்க் 
   Tamilnad Mercantile Bank:
-  - தமிழ்நாடு மெர்க்கண்டைல் ​​வங்கி
-  - தமிழ்நாடு மெர்க்கண்டைல் ​​பேங்க்
-  - தமிழ்நாடு மெர்க்கண்டைல் ​​வங்கி
-  - தமிழ்நாடு ​​பேங்க்
-  - தமிழ்நாடு ​​வங்கி
-  - மெர்க்கண்டைல் ​​பேங்க்
+  - தமிழ்நாடு மெர்க்கண்டைல் வங்கி
+  - தமிழ்நாடு மெர்க்கண்டைல் பேங்க்
+  - தமிழ்நாடு மெர்க்கண்டைல் வங்கி
+  - தமிழ்நாடு பேங்க்
+  - தமிழ்நாடு வங்கி
+  - மெர்க்கண்டைல் பேங்க்
   - மெர்க்கண்டைல் வங்கி
   - தமிழ்நாடு மெர்க்கண்டில் பேங்க் 
   - தமிழ்நாடு பேங்க் 
@@ -699,17 +716,17 @@ bank_name:
   The Ahmedabad District Co op bank:
   - அகமதாபாத் மாவட்ட கூட்டுறவு வங்கி
   The Ahmedabad Mercantile Co op bank:
-  - அகமதாபாத் மெர்கன்டைல் ​​கூட்டுறவு வங்கி
+  - அகமதாபாத் மெர்கன்டைல் கூட்டுறவு வங்கி
   The Ahmednagar Merchants Co-op Bank Ltd:
   - அகமதுநகர் வணிகர்கள் கூட்டுறவு வங்கி லிமிடெட்
   The Akola District Central Cooperative Bank Ltd:
   - அகோலா மாவட்ட மத்திய கூட்டுறவு வங்கி லிமிடெட்
   The Anand Mercantile Co-Op. Bank Ltd.:
-  - ஆனந்த் மெர்கன்டைல் ​​கோஆப். வங்கி லிமிடெட்
+  - ஆனந்த் மெர்கன்டைல் கோஆப். வங்கி லிமிடெட்
   The Banaskantha District Central Co-Op. Bank Ltd.:
   - பனஸ்கந்தா மாவட்ட மத்திய கூட்டுறவு. வங்கி லிமிடெட்
   The Banaskantha Mercantile Co-operative Bank Limited:
-  - பனஸ்கந்தா மெர்கன்டைல் ​​கூட்டுறவு வங்கி லிமிடெட்
+  - பனஸ்கந்தா மெர்கன்டைல் கூட்டுறவு வங்கி லிமிடெட்
   The Baramati Sahakari Bank Ltd:
   - பாராமதி சககாரி வங்கி லிமிடெட்
   The Baroda Central Co-op Bank Ltd:
@@ -835,7 +852,7 @@ bank_name:
   The Surat District Co-op Bank Ltd.:
   - சூரத் மாவட்ட கூட்டுறவு வங்கி லிமிடெட்.
   The Surat Mercantile Coop Bank Ltd:
-  - சூரத் மெர்கன்டைல் ​​கோப் வங்கி லிமிடெட்
+  - சூரத் மெர்கன்டைல் கோப் வங்கி லிமிடெட்
   The Surat Peoples Co op Bank:
   - சூரத் மக்கள் கூட்டுறவு வங்கி
   The Sutex Co Op Bank:
@@ -872,7 +889,9 @@ bank_name:
   - யுகோ
   - யூசிஓ பேங்க் 
   - ஓஊசி பேங்க் 
-  - பேங்க் ஆஃ யூசிஓ 
+  - பேங்க் ஆஃ யூசிஓ
+  - யூகோ பேங்க்ல
+  - யூகோ பேங்க் 
   Ujjivan Small Finance Bank:
   - உஜ்ஜீவன் சிறு நிதி வங்கி
   Union Bank of India:
@@ -923,3 +942,208 @@ bank_name:
   - எக்ஸ் பேங்க் 
   - பேங்க் எஸ் 
   - எஸ் வங்கி
+  - யஸ் பேங்க்
+  - யஸ் பேங்க்க்கு
+  - யெஸ் பேங்க்
+lpg_gas_provider_name:
+  Bharat Petroleum Corporation Ltd.:
+  - பாரத் பெட்ரோலியம் கார்ப்பரேஷன் லிமிடெட்
+  - பி பி சி எல்
+  - பாரத் ஜிஏஎஸ்
+  - பாரத் பெட்ரோலியம்
+  - பாரத் எரிவாயு
+  - பாரத் கேஸோட 
+  Hindustan Petroleum Corporation Ltd.:
+  - ஹிந்துஸ்தான் பெட்ரோலியம் கார்ப்பரேஷன் லிமிடெட்
+  - ஹ் ப் ஜிஏஎஸ்
+  - ஹ் ப்
+  - ஹிந்துஸ்தான் பெட்ரோலியம்
+  - ஹ் ப் சி ல்
+  - எச்பியோட
+  Indian Oil Corporation Ltd:
+  - இந்தியன் ஆயில் கார்ப்பரேஷன் லிமிடெட்
+  - இண்டேன் ஜிஏஎஸ்
+  - இண்டேன்
+  - இண்டியன் கேஸோட
+  Jyothi Gas Pvt. Ltd:
+  - ஜோதி கேஸ் பிரைவேட் லிமிடெட்
+  - ஜோதி வாயு
+  - ஜோதி ஜிஏஎஸ்
+  - ஜோதி எரிவாயு
+  - ஜோதி எரிவாயு்
+pipe_gas_provider_name:
+  Aavantika Gas Ltd.:
+  - அவந்திகா கேஸ் லிமிடெட்
+  Adani Total Gas Limited:
+  - அதானி டோட்டல் ஜிஏஎஸ் லிமிடெட்
+  - அதானி ஜிஏஎஸ்
+  - அதானி டோட்டல்
+  - அதானி குழாய் எரிவாயு
+  Assam Gas Company Limited:
+  - அசாம் ஜிஏஎஸ் கம்பெனி லிமிடெட்
+  - அசாம் ஜிஏஎஸ் கம்பெனி
+  - அசாம் ஜிஏஎஸ்
+  Bhagyanagar Gas Limited:
+  - பாக்யநகர் ஜிஏஎஸ் லிமிடெட்
+  Central U.P. Gas Limited:
+  - மத்திய u p எரிவாயு லிமிடெட்
+  - सेन्ट्रल यू पी गैस लिमिटेड
+  Charotar Gas Sahakari Mandali Ltd:
+  - சரோடர் வாயு சககாரி மண்டலி லிமிடெட்
+  GAIL Gas Limited:
+  - கெயில் ஜிஏஎஸ் லிமிடெட்
+  - கெயில்
+  GAIL India Limited:
+  - கெயில் இந்தியா லிமிடெட்
+  - கெயில் இந்தியா
+  Green Gas Limited(GGL):
+  - கிரீன் ஜிஏஎஸ் லிமிடெட்
+  - கிரீன் ஜிஏஎஸ்
+  - ஜி ஜி ல்
+  Gujarat Gas Limited:
+  - குஜராத் ஜிஏஎஸ் லிமிடெட்
+  Gujarat State Petronet Limited:
+  - குஜராத் ஸ்டேட் பெட்ரோநெட் லிமிடெட்
+  Haryana City Gas - Kapil Chopra Enterprise:
+  - ஹரியானா சிட்டி ஜிஏஎஸ் கபில் சோப்ரா என்டர்பிரைஸ்
+  - ஹரியானா சிட்டி ஜிஏஎஸ்
+  - கபில் சோப்ரா என்டர்பிரைஸ்
+  IRM Energy Private Limited:
+  - இ ஆர் ம் எனர்ஜி பிரைவேட் லிமிடெட்
+  Indian Oil Corporation Ltd-Piped Gas:
+  - இந்தியன் ஆயில் கார்ப்பரேஷன் லிமிடெட் பைப்ட் ஜிஏஎஸ்
+  - ஐஓசிஎல்
+  - இந்தியன் ஆயில்
+  Indian Oil-Adani Gas Private Limited:
+  - இந்தியன் ஆயில் அதானி ஜிஏஎஸ் பிரைவேட் லிமிடெட்
+  Indraprastha Gas:
+  - இந்திரபிரஸ்தா ஜிஏஎஸ்
+  - இ ஜி ல்
+  - இந்திரபிரஸ்தா ஜிஏஎஸ்
+  Mahanagar Gas Limited:
+  - மகாநகர் ஜிஏஎஸ் லிமிடெட்
+  - மகாநகர் ஜிஏஎஸ்
+  Maharashtra Natural Gas Limited (MNGL):
+  - மகாராஷ்டிரா நேச்சுரல் ஜிஏஎஸ் லிமிடெட்
+  - மீ என் ஜி எல்
+  - மகாராஷ்டிரா ஜிஏஎஸ் லிமிடெட்
+  Megha Gas:
+  - மேகா வாயு
+  Naveriya Gas Pvt Ltd:
+  - நவேரியா கேஸ் பிரைவேட் லிமிடெட்
+  Purba Bharati Gas Pvt Ltd:
+  - புர்பா பாரதி ஜிஏஎஸ் பிரைவேட் லிமிடெட்
+  Rajasthan State Gas Limited:
+  - ராஜஸ்தான் ஸ்டேட் ஜிஏஎஸ் லிமிடெட்
+  Sabarmati Gas Limited (SGL):
+  - சபர்மதி ஜிஏஎஸ் லிமிடெட்
+  - ஸ் ஜி ல்
+  Torrent Gas:
+  - டோரன்ட் ஜிஏஎஸ்
+  Tripura Natural Gas:
+  - திரிபுரா நேச்சுரல் ஜிஏஎஸ்
+  Unique Central Piped Gases Pvt Ltd (UCPGPL):
+  - தனித்துவமான மத்திய குழாய் வாயுக்கள் பிரைவேட் லிமிடெட்
+  - உ சி ப் ஜி ப் ல்
+  Vadodara Gas Limited:
+  - வதோதரா ஜிஏஎஸ் லிமிடெட்
+telephone_operator:
+  Airtel:
+  - ஏர்டெல்
+  - பாரதி ஏர்டெல்
+  BSNL:
+  - பிஎஸ்என்எல்
+  Jio:
+  - ஜியோ
+  - ரிலையன்ஸ் ஜியோ
+  MTNL:
+  - டால்பின்
+  - டிரம்ப்
+  - எம்டிஎன்எல்
+  Vodafone:
+  - வி
+  - வோடாஃபோன்
+  - ஐடியா
+# state_name:
+#   Andaman and Nicobar:
+#   - அந்தமன் அண்ட் நிக்கோபார்
+#   - அந்தமன் நிக்கோபார்
+#   - அந்தமன்
+#   Andhra Pradesh:
+#   - ஆந்திரா பிரதேஷ்
+#   - ஒரு ப
+#   - ஆந்திரா
+#   Arunachal Pradesh:
+#   - அருணாச்சல் பிரதேஷ்
+#   - அருணாச்சல்
+#   Assam:
+#   - அசாம்
+#   Bihar:
+#   - பிஹார்
+#   Chandigarh:
+#   - சண்டிகர்
+#   Dadra and Nagar Haveli:
+#   - தாத்ரா நகர் ஹவேலி
+#   - தாத்ரா அண்ட் நகர் ஹவேலி
+#   Daman and Diu:
+#   - டாமன் மற்றும் டையூ
+#   Delhi:
+#   - டெல்லி
+#   Goa:
+#   - கோவா
+#   Gujarat:
+#   - குஜராத்
+#   Haryana:
+#   - ஹரியானா
+#   Himachal Pradesh:
+#   - ஹிமாச்சல் பிரதேஷ்
+#   - ஹிமாச்சல்
+#   Jammu and Kashmir:
+#   - ஜம்மு அண்ட் காஷ்மீர்
+#   - ஜே அண்ட் கே
+#   - ஜம்மு காஷ்மீர்
+#   Karnataka:
+#   - கர்நாடக
+#   Kerala:
+#   - கேரள
+#   Lakshadweep:
+#   - லக்ஷத்வீப்
+#   Madhya Pradesh:
+#   - மத்யா பிரதேஷ்
+#   - ம் ப
+#   Maharashtra:
+#   - மகாராஷ்டிரா
+#   Manipur:
+#   - மணிப்பூர்
+#   Meghalaya:
+#   - மேகாலயா
+#   Mizoram:
+#   - மிசோரம்
+#   Nagaland:
+#   - நாகலாந்த்
+#   Odisha:
+#   - ஒரிசா
+#   - ஒடிஷா
+#   Puducherry:
+#   - புதுச்சேரி
+#   - பாண்டிச்சேரி
+#   Punjab:
+#   - பஞ்சாப்
+#   Rajasthan:
+#   - ராஜஸ்தான்
+#   Sikkim:
+#   - சிக்கிம்
+#   Tamil Nadu:
+#   - தமிழ் நாடு
+#   - ட் என்
+#   Telangana:
+#   - தெலங்கானா
+#   Tripura:
+#   - திரிபுரா
+#   Uttar Pradesh:
+#   - உத்தர் பிரதேஷ்
+#   - உ ப்
+#   West Bengal:
+#   - வெஸ்ட் பெங்கால்
+#   - பெங்கால்
+  - பஸ்சிம் பங்கல்
