--- a/config.yaml
+++ b/config.yaml
@@ -1,8 +1,15 @@
 supported_languages:
   - en
   - hi
-  # - ta
-  # - or
+  - ta
+  - or
+  - kn
+  - ml
+  - te
+  - mr
+  - bn
+  - pa
+  - gu
 
 asr:
   en:
@@ -20,14 +27,63 @@ asr:
     hotword_mode: entities-unique
     hotword_weight: 2.5
   ta:
-    am_path: asr/models/am/ta-conformer.nemo
+    am_path: asr/models/am/ai4b_indicConformer_ta.nemo
     lm_path:
     lm_alpha:
     lm_beta:
     hotword_mode: entities-unique
     hotword_weight: 10.0
   or:
-    am_path: asr/models/am/or-dummy-conformer.nemo
+    am_path: asr/models/am/ai4b_indicConformer_or.nemo
+    lm_path:
+    lm_alpha:
+    lm_beta:
+    hotword_mode: entities-unique
+    hotword_weight: 10.0
+  kn:
+    am_path: asr/models/am/ai4b_indicConformer_kn.nemo
+    lm_path:
+    lm_alpha:
+    lm_beta:
+    hotword_mode: entities-unique
+    hotword_weight: 10.0
+  ml:
+    am_path: asr/models/am/ai4b_indicConformer_ml.nemo
+    lm_path:
+    lm_alpha:
+    lm_beta:
+    hotword_mode: entities-unique
+    hotword_weight: 10.0
+  te:
+    am_path: asr/models/am/ai4b_indicConformer_te.nemo
+    lm_path:
+    lm_alpha:
+    lm_beta:
+    hotword_mode: entities-unique
+    hotword_weight: 10.0
+  mr:
+    am_path: asr/models/am/ai4b_indicConformer_mr.nemo
+    lm_path:
+    lm_alpha:
+    lm_beta:
+    hotword_mode: entities-unique
+    hotword_weight: 10.0
+  bn:
+    am_path: asr/models/am/ai4b_indicConformer_bn.nemo
+    lm_path:
+    lm_alpha:
+    lm_beta:
+    hotword_mode: entities-unique
+    hotword_weight: 10.0
+  pa:
+    am_path: asr/models/am/ai4b_indicConformer_pa.nemo
+    lm_path:
+    lm_alpha:
+    lm_beta:
+    hotword_mode: entities-unique
+    hotword_weight: 10.0
+  gu:
+    am_path: asr/models/am/ai4b_indicConformer_gu.nemo
     lm_path:
     lm_alpha:
     lm_beta:
@@ -35,7 +91,7 @@ asr:
     hotword_weight: 10.0
 
 intent:
-  model_path: intent/models/all-lang-all/checkpoint-3000
+  model_path: intent/models/10-04-2024-model/checkpoint-28000
   label_dict_path: intent/models/all-lang-all/labels-dict.pkl
   confidence_threshold: 0.75
   supported_intents:
@@ -61,6 +117,13 @@ entities:
     hi: entity/data/variations/variations-hi.yaml
     ta: entity/data/variations/variations-ta.yaml
     or: entity/data/variations/variations-or.yaml
+    kn: entity/data/variations/variations-kn.yaml
+    ml: entity/data/variations/variations-ml.yaml
+    te: entity/data/variations/variations-te.yaml
+    mr: entity/data/variations/variations-mr.yaml
+    bn: entity/data/variations/variations-bn.yaml
+    pa: entity/data/variations/variations-pa.yaml
+    gu: entity/data/variations/variations-gu.yaml
   pattern_path: entity/data/patterns.yaml
   supported_entities:
   - bank_name
